compiler/testData/diagnostics/tests/resolve/invoke/errors/wrongReceiverTypeForInvoke.kt
// !DIAGNOSTICS: -UNUSED_PARAMETER
// IGNORE_IF_NEW_INFERENCE_ENABLED

fun String.invoke(i: Int) {}

fun foo(i: Int) {
    <!OPERATOR_MODIFIER_REQUIRED!>i<!>(1)

    <!FUNCTION_EXPECTED!>1<!>(1)
}
